k8s/ingresses/consul.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: consul
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: "/tastopia/ci/deploy/consul"
            pathType: Prefix
            backend:
              service:
                name: consul
                port:
                  number: 8500
