k8s/ingresses/identity-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: identity-api
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: "/identity(/|$)(.*)"
            pathType: ImplementationSpecific
            backend:
              service:
                name: identity-api
                port:
                  number: 80
