k8s/ingresses/website.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: website
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: "/dashboard(/|$)(.*)"
            pathType: ImplementationSpecific
            backend:
              service:
                name: website
                port:
                  number: 80
